# libevmvc

./: .gitignore  .gitmodules  CMakeLists.txt  GPATH  GTAGS  README.md  TODO.md  libevent_mvc_config.h.in  libevmvc_config.h.in
CMake/: FindLibEvent.cmake  FindLibEvhtp.cmake  Findoniguruma.cmake
doc-event-mvc/: README.md
doc-evmvc/: CMakeLists.txt  Doxyfile.in  README.md  tmp-example-fan.ast
examples-evmvc/: CMakeLists.txt  cert.pem  common.h  config.jsonc  key.pem  multipart-form-data-raw  stress-test.sh  stress-test2.sh  web-server.cpp
examples-evmvc/html/: index.html  login-results.html  login.html
examples-evmvc/html/css/: app.css  uikit.min.tar.xz.txt
examples-evmvc/html/scripts/: app.js  markdown-it.js
examples-evmvc/views/helpers/: utils.fan
examples-evmvc/views/home/: fail.fan  index.fan
examples-evmvc/views/layouts/: _layout.fan
examples-evmvc/views/partials/: user_info.fan
fanjet-precompiler/: CMakeLists.txt  main.cpp
ide/vscode/fanjet/: .gitignore  CHANGELOG.md  LICENSE  README.md  fanjet-0.1.9.vsix  language-configuration.json  package.json
ide/vscode/fanjet/doc/: lang-feat.cpp  lang-feat.fan  lang-feat.h  lang-feat.inc.h  old-feat.h
ide/vscode/fanjet/snippets/: fanjet.snippets.json
ide/vscode/fanjet/syntaxes/: fanjet.tmLanguage.1.json  fanjet.tmLanguage.bak.json  fanjet.tmLanguage.json
ide/vscode/fanjet/test/colorize-fixtures/: test-01.fan  test-02.fan  test-03.fan  test-04.fan  test-05.fan
include/event-mvc/: app.h  cb_def.h  event-mvc.h  libevent_mvc_config.h  request.h  response.h  router.h  stable_headers.h  traits.h  utils.h  verbs.h
include/evmvc/: _internal.h  _internal_impl.h  app.h  app_options.h  cb_def.h  child_server.h  child_server_impl.h  cmd.h  configuration.h  connection.h  connection_impl.h  cookies.h  events.h  evmvc.h  fields.h  file_reply.h  files.h  filter_policies.h  global.h  headers.h  http_param.h  jwt.h  logging.h  master_server.h  master_server_impl.h  methods.h  mime.h  multipart_parser.h  multipart_utils.h  parser.h  parser_impl.h  request.h  request_impl.h  response.h  response_data.h  response_impl.h  router.h  router_impl.h  server.h  ssl_utils.h  (+13 more)
include/evmvc/fanjet/: fan_ast.h  fan_ast_gen_impl.h  fan_ast_impl.h  fan_ast_parse_impl.h  fan_ast_parser.h  fan_common.h  fan_parser.h  fan_tokenizer.h  fan_view_base.h  fan_view_engine.h  fanjet.h
tests-event-mvc/: CMakeLists.txt
tests-event-mvc/routing/: router_tests.cpp
tests-evmvc/: CMakeLists.txt  main.cpp  utils_tests.cpp
tests-evmvc/fanjet/: fanjet_tests.cpp
tests-evmvc/jetfan/: jetfan_tests.cpp
tests-evmvc/routing/: router_tests.cpp
tmp/bbact/: CMakeLists.txt  notes.md
tmp/bbact/cmake_modules/: FindLibEvent.cmake
tmp/bbact/src/: globals.h  main.cpp  stable_headers.h  unix_sockets.h  worker.h
tmp/sbbact/: CMakeLists.txt
tmp/sbbact/src/: main.cpp  sockets_util.h  stable_headers.h  worker.h
